core-concepts/04_services_routes/nginx-deployment-cm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginxinc/nginx-unprivileged:1.18
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: index
            mountPath: "/usr/share/nginx/html"
            readOnly: true
      volumes:
        - name: index
          configMap:
            name: index
