core-concepts/04_services_routes/nginx-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
  name: nginx
  namespace: nginx
spec:
  host: nginx-nginx.apps.ocp.lan.stderr.at
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nginx
    weight: 100
  wildcardPolicy: None
